src/snapshots/rnix_analyzer__scope__tests__scope_let_in_multiple_variable.snap
---
source: src/scope.rs
expression: scopes.0
---
[
    Scope {
        kind: LetIn,
        defines: {
            "a": Definition {
                id: 0,
                name: "a",
                text_range: [4; 5),
            },
            "b": Definition {
                id: 1,
                name: "b",
                text_range: [11; 12),
            },
        },
        text_range: [0; 26),
    },
]
