src/snapshots/rnix_analyzer__scope__tests__scope_recursive_attr_set_error_already_defined.snap
---
source: src/scope.rs
expression: scopes.1
---
[
    AlreadyDefined(
        RecursiveAttrSet,
        "b",
        [56; 57),
        [37; 38),
    ),
]
