src/snapshots/rnix_analyzer__scope__tests__scope_scope_lambda_pattern_error_already_defined.snap
---
source: src/scope.rs
expression: scopes.1
---
[
    AlreadyDefined(
        Lambda,
        "a",
        [4; 5),
        [1; 2),
    ),
]
