src/snapshots/rnix_analyzer__scope__tests__scope_with.snap
---
source: src/scope.rs
expression: scopes.0
---
[
    Scope {
        kind: With,
        defines: {},
        text_range: [0; 16),
    },
]
